--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-language: python
+matrix:
+  include:
+    - language: python
+    - language: r
 
 os: linux
 
 python:
     - "2.7.12"
     #- "3.6.3"
+
+r : bioc-release
 
 #sudo: false
 
