--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,6 @@ addons:
     - tk-dev
     - mcl
     - libgtk2.0-dev
-    # - r-base-core
     - python-rpy2
     - libcurl4-gnutls-dev
     - unzip
@@ -71,8 +70,12 @@ before_install:
     - mkdir -p ${HOME}/code
     - mkdir -p ${HOME}/R
     - lsb_release -a
-    - deb http://cran.r-project.org/bin/linux/ubuntu trusty/
-    - apt update
+
+    # Install the latest version of R
+    - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
+    - echo "deb http://cran.r-project.org/bin/linux/ubuntu trusty/" | sudo tee -a /etc/apt/sources.list
+    - sudo apt-get update -qq
+    - sudo apt-get install r-base-core
 
 services:
     - docker
@@ -80,12 +83,6 @@ services:
 install:
     # libtbb-dev did not seem to be installing correctly without using sudo
     - sudo apt-get install libtbb-dev
-
-    # Install the latest version of R
-    - sudo deb http://cran.r-project.org/bin/linux/ubuntu trusty/
-    - sudo apt update
-    - sudo apt-get install r-base-core
-    - R --version
 
     # Install APIs and Pipelines
     - cd ${HOME}/build/Multiscale-Genomics/mg-process-fastq
