--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,11 @@ python:
 
 #sudo: false
 
+env:
+    matrix:
+        - TESTENV=docs
+        - TESTENV=code
+
 addons:
   apt:
     packages:
@@ -74,8 +79,10 @@ before_install:
     - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
     - echo "deb http://cran.r-project.org/bin/linux/ubuntu trusty/" | sudo tee -a /etc/apt/sources.list
     - sudo apt-get update -qq
-    - sudo apt-get install r-base-core
-    - sudo apt-get install python-rpy2
+
+    - if [[ "$TESTENV" == "code" ]]; then sudo apt-get install r-base-core; fi
+    - if [[ "$TESTENV" == "code" ]]; then sudo apt-get install python-rpy2; fi
+    - if [[ "$TESTENV" == "code" ]]; then ./scripts/travis/install_code_test_dependencies.sh; fi
 
 services:
     - docker
@@ -89,88 +96,7 @@ install:
     - git status
     - pip install -e .
     - pip install -r requirements.txt
-
-    # FastQC
-    - cd ${HOME}/lib
-    - wget http://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc_v0.11.5.zip
-    - unzip fastqc_v0.11.5.zip
-    - cd FastQC/
-    - chmod 755 fastqc
-
-    # htslib
-    - cd ${HOME}/lib
-    - git clone https://github.com/samtools/htslib.git
-    - cd htslib
-    - autoheader
-    - autoconf
-    - ./configure --prefix=${HOME}/lib/htslib
-    - make
-    - make install
-
-    # SAMtools
-    - cd ${HOME}/lib
-    - git clone https://github.com/samtools/samtools.git
-    - cd samtools
-    - autoheader
-    - autoconf -Wno-syntax
-    - ./configure --prefix=${HOME}/lib/samtools
-    - make
-    - make install
-
-    # UCSC Tools
-    - cd ${HOME}/lib
-    - wget http://hgdownload.cse.ucsc.edu/admin/exe/linux.x86_64/bedToBigBed
-    - wget http://hgdownload.cse.ucsc.edu/admin/exe/linux.x86_64/wigToBigWig
-
-    # Bowtie2 Aligner
-    - cd ${HOME}/lib
-    - wget --max-redirect 1 https://downloads.sourceforge.net/project/bowtie-bio/bowtie2/2.3.4/bowtie2-2.3.4-linux-x86_64.zip
-    - unzip bowtie2-2.3.4-linux-x86_64.zip
-
-    # BWA Sequence Aligner
-    - cd ${HOME}/lib
-    - git clone https://github.com/lh3/bwa.git
-    - cd bwa
-    - make
-
-    # GEM Indexer
-    - cd ${HOME}/lib
-    - wget http://barnaserver.com/gemtools/releases/GEMTools-static-core2-1.7.1.tar.gz
-    - tar -xzf GEMTools-static-core2-1.7.1.tar.gz
-
-    # iNPS Peak Caller
-    - cd ${HOME}/lib
-    - mkdir iNPS
-    - cd iNPS
-    - wget http://www.picb.ac.cn/hanlab/files/iNPS_V1.2.2.zip
-    - unzip iNPS_V1.2.2.zip
-
-    # Kallisto
-    - cd ${HOME}/lib
-    - wget https://github.com/pachterlab/kallisto/releases/download/v0.43.1/kallisto_linux-v0.43.1.tar.gz
-    - tar -xzf kallisto_linux-v0.43.1.tar.gz
-
-    # bedTools
-    - wget https://github.com/arq5x/bedtools2/releases/download/v2.26.0/bedtools-2.26.0.tar.gz
-    - tar -zxvf bedtools-2.26.0.tar.gz
-    - cd bedtools2
-    - make
-    # - cd ${HOME}/build/Multiscale-Genomics/mg-process-fastq
-
-    # Install MACS2
-    - cd ${HOME}/build/Multiscale-Genomics/mg-process-fastq
-    - chmod +x scripts/travis/includeMAC2.sh
-    - ./scripts/travis/includeMAC2.sh
-
-    # Install R packages required by iDEAR
-    # - cd ${HOME}/build/Multiscale-Genomics/mg-process-fastq
-    # - chmod +x scripts/travis/includeMAC2.sh
-    # - sudo Rscript scripts/install_packages.R
-
-    # Install TADbit (only on Python 2.7)
-    - cd ${HOME}/build/Multiscale-Genomics/mg-process-fastq
-    - chmod +x scripts/travis/includeTADbit.sh
-    - ./scripts/travis/includeTADbit.sh
+    - if [[ "$TESTENV" == "docs" ]]; then pip install sphinx;fi
 
     # Install BSseeker
     - cd ${HOME}/lib
@@ -181,10 +107,6 @@ install:
     - ln -s ${HOME}/lib/BSseeker2/bs_index bs_index
     - ln -s ${HOME}/lib/BSseeker2/bs_utils bs_utils
     - ln -s ${HOME}/lib/BSseeker2/FilterReads.py FilterReads.py
-
-    # Post Installation Tidyup
-    - cd ${HOME}/lib
-    - rm *.zip *.tar.gz
 
 before_script:
     - cd ${HOME}/bin
@@ -275,5 +197,6 @@ before_script:
     - export PATH="${HOME}/bin:$PATH"
 
 script:
-    "./scripts/travis/harness.sh"
+    if [[ "$TESTENV" == "code" ]]; then ./scripts/travis/harness.sh; fi
+    if [[ "$TESTENV" == "docs" ]]; then ./scripts/travis/docs_harness.sh; fi
 
