--- a/.travis.yml
+++ b/.travis.yml
@@ -197,7 +197,6 @@ before_script:
     - export PATH="${HOME}/bin:$PATH"
 
 script:
-    if [[ "$TESTENV" == "code" ]]; then ./scripts/travis/harness.sh; fi
-
-    if [[ "$TESTENV" == "docs" ]]; then ./scripts/travis/docs_harness.sh; fi
+    - if [[ "$TESTENV" == "code" ]]; then ./scripts/travis/harness.sh; fi
+    - if [[ "$TESTENV" == "docs" ]]; then ./scripts/travis/docs_harness.sh; fi
 
