--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-*.fastq filter=lfs diff=lfs merge=lfs -text
 *.fasta filter=lfs diff=lfs merge=lfs -text
+*.fastq filter=lfs diff=lfs merge=lfs -text
+*.fastq.gz filter=lfs diff=lfs merge=lfs -text
